--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.2"
+    "react-scripts": "^4.0.3",
+    "web-vitals": "^2.1.2",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "scripts": {
     "start": "npm-run-all --parallel start:**",
