--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
-    "immer": "^9.0.7",
     "npm-run-all": "^4.1.5",
     "postcss-safe-parser": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^2.1.2",
-    "yarn-upgrade-all": "^0.5.4"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "npm-run-all --parallel start:**",
