--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
@@ -20,6 +19,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "react-spinners": "^0.11.0",
+    "sqlite3": "^5.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
