--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 .env.test.local
 .env.production.local
 
-.vscode
-package-lock.json
+#.vscode
+#package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
