--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-safe-parser": "^6.0.0",
     "react": "^17.0.2",
