--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "formidable": "^2.0.1",
     "http-proxy-middleware": "^2.0.1",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
@@ -20,6 +22,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^8.2.0",
     "sqlite3": "^5.0.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
