--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^8.2.0",
     "sqlite3": "^5.0.2",
     "styled-components": "^5.3.3",
+    "three": "^0.137.5",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
