--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.2.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "sqlite3": "^5.0.2",
     "styled-components": "^5.3.3",
     "three": "^0.137.5",
